@@ -1,5 +1,17 @@
 2012-10-05  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [GTK] Test /webkit2/WebKitWebResource/response fails
+        https://bugs.webkit.org/show_bug.cgi?id=98511
+
+        Reviewed by Martin Robinson.
+
+        Do not consider the favicon as a resource for the web resources
+        unit tests.
+
+        * UIProcess/API/gtk/tests/TestResources.cpp:
+
+2012-10-05  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         REGRESSION (r129989 - r130019): [WK2] TestResources test is failing
         https://bugs.webkit.org/show_bug.cgi?id=98342
 
